feat(plugins): add plugin and IRCv3 extension architecture